<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    
    <!-- Facebook API application ID -->
    <string name="app_id">684812908196284</string>
    
    <string name="me">Me</string>
    <string name="about">About</string>
    <string name="friends">Friends</string>
    
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="bio">Bio:</string>
    <string name="link">Link:</string>
    <string name="email">Email:</string>
    <string name="about_text">Test application\n\n42coffecups\n\nDeveloper: Victor Vovchenko</string>
    <string name="not_specified">not specified</string>
    
    <string name="dialog_login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="load_photo">Load photo</string>
    <string name="loading_friends_list">Loading friends list&#8230;</string>
    
    <string name="connection">Connection</string>
    <string name="connection_is_out">Internet connection is down</string>
    <string name="connection_settings">Go to Settings</string>
    <string name="get_data">Downloading information</string>
    <string name="get_user_info_error">Error while getting user data</string>
    <string name="get_friends_error">Error while getting friends list</string>
    
    <string name="edit_data">Edit</string>
    <string name="save_data">Save</string>
    
    <string name="name_hint">your name</string>
    <string name="surname_hint">your surname</string>
    <string name="bio_hint">your bio</string>
    <string name="link_hint">Facebook link</string>
    <string name="email_hint">your email</string>
    
    <string name="dateofbitrh_error">You can\'t be born in future, don\'t you? :)</string>
    <string name="data_input_error">Fill all fields correct</string>
    <string name="data_saved">Your data successfully saved</string>
    
    <string name="friend_photo">User photo</string>
    <string name="no_friends">Sorry, your friends list is empty&#8230;</string>
    <string name="reload">Reload</string>
    
    <string name="user_priority">User priority</string>
    
</resources>
