<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/name_text"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColor="@color/text_value"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/surname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/name_edit"
            android:paddingTop="10dp"
            android:text="@string/surname"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/surname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/surname_text"
            android:ems="10"
            android:hint="@string/surname_hint"
            android:inputType="text"
            android:textColor="@color/text_value"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/date_of_birth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/surname_edit"
            android:paddingTop="10dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/date_of_birth_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/date_of_birth_text"
            android:textColor="@color/text_value"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/date_of_birth_value"
            android:paddingTop="10dp"
            android:text="@string/bio"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/bio_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bio_text"
            android:ems="10"
            android:hint="@string/bio_hint"
            android:inputType="textMultiLine"
            android:textColor="@color/text_value"
            android:textSize="@dimen/bio_text_size" />

        <TextView
            android:id="@+id/link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bio_edit"
            android:paddingTop="10dp"
            android:text="@string/link"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/link_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/link_text"
            android:ems="10"
            android:hint="@string/link_hint"
            android:inputType="textUri"
            android:paddingLeft="5dp"
            android:textColor="@color/text_value"
            android:textSize="@dimen/text_size" >
        </EditText>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/link_edit"
            android:paddingTop="10dp"
            android:text="@string/email"
            android:textColor="@color/text_caption"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/email_text"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="@color/text_value"
            android:textSize="@dimen/text_size" >
        </EditText>
    </RelativeLayout>

</ScrollView>